syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "ThreadDump.proto";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.grpc.trace";
option java_outer_classname = "CmdProto";
//option objc_class_prefix = "PIN";

package v1;

enum PCommandType {
    NONE = 0;

    PING = 100;
    PONG = 101;

    ECHO = 710;
}

message PCmdMessage {
    oneof message {
        PCmdServiceHandshake handshakeMessage = 1;
        PCmdResponse failMessage = 2;
    }
}

message PCmdServiceHandshake {
    // initial message
    repeated int32 supportCommandServiceKey = 1;
}

message PCmdResponse {
    int32 responseId = 1;
    int32 status = 2;
    google.protobuf.StringValue message = 3;
}

message PCmdRequest {
    int32 requestId = 1;

    oneof command {
        PCmdEcho commandEcho = 710;
    }
}

message PCmdEcho {
    string message = 1;
}

message PCmdEchoResponse {
    PCmdResponse commonResponse = 1;
    string message = 2;
}

message PCommandThreadDump {
    PThreadDumpType type = 1;
    string name = 2;
    int64 pendingTimeMillis = 3;
}

message PCommandThreadDumpResponse {
    repeated PThreadDump threadDump = 1;
}

message PCmdActiveThreadCount {
}

message PCmdActiveThreadCountRes {
    int32 histogramSchemaType = 1;
    repeated int32 activeThreadCount = 2;
    int64 timeStamp = 3;
}